[gd_scene load_steps=13 format=3 uid="uid://bojgvwhs7rkjp"]

[ext_resource type="Script" path="res://levels/FishingOnigiri/fishing_mini_game.gd" id="1_ahc27"]
[ext_resource type="Texture2D" uid="uid://ys7yvhn1l85s" path="res://levels/FishingOnigiri/assets/local-pesca.png" id="2_jeixe"]
[ext_resource type="Texture2D" uid="uid://d0ajepjvov07p" path="res://levels/FishingOnigiri/assets/pescaria-onigiri-completo.png" id="3_k8b77"]
[ext_resource type="Texture2D" uid="uid://2rdd2pklhdsq" path="res://levels/FishingOnigiri/assets/barra de progresso.png" id="4_sgpah"]
[ext_resource type="Script" path="res://levels/FishingOnigiri/PlayerHook.gd" id="5_nc1vi"]
[ext_resource type="Script" path="res://levels/FishingOnigiri/Onigiri.gd" id="6_kldpi"]
[ext_resource type="Texture2D" uid="uid://bof3iq6cbca38" path="res://levels/FishingOnigiri/assets/Pirata e manivela 2.png" id="7_td02i"]
[ext_resource type="PackedScene" uid="uid://3lpkqn01prw3" path="res://scenes/pirata.tscn" id="8_3iyes"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23iq2"]
size = Vector2(42.4999, 37.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l64oo"]
size = Vector2(42.4999, 37.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8atw"]
size = Vector2(141.667, 133.333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvjrv"]
size = Vector2(37, 16)

[node name="Fishing mini game" type="Node2D"]
position = Vector2(256, 96)
script = ExtResource("1_ahc27")

[node name="Fundo" type="Sprite2D" parent="."]
position = Vector2(-94.7504, -4.9998)
scale = Vector2(0.496095, 0.499999)
texture = ExtResource("2_jeixe")

[node name="Barras-pesca" type="Sprite2D" parent="."]
position = Vector2(-328.083, -84.8466)
scale = Vector2(0.919402, 0.499535)
texture = ExtResource("3_k8b77")
offset = Vector2(288, 160)
region_enabled = true
region_rect = Rect2(82, 10.5, 119.195, 340.066)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -40.0
offset_top = -88.0
offset_right = -12.0
offset_bottom = 78.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("4_sgpah")

[node name="Label" type="Label" parent="."]
offset_left = -212.0
offset_top = -91.0
offset_right = -190.0
offset_bottom = -64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20

[node name="PlayerHook" type="CharacterBody2D" parent="."]
position = Vector2(284, 58)
scale = Vector2(0.4, 0.4)
collision_mask = 4
script = ExtResource("5_nc1vi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHook"]
position = Vector2(-876.25, -111.25)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_23iq2")

[node name="Sprite2D" type="Sprite2D" parent="PlayerHook"]
position = Vector2(-876.25, -111.25)
scale = Vector2(0.923913, 0.815217)
texture = ExtResource("3_k8b77")
region_enabled = true
region_rect = Rect2(332.039, 207.761, 46, 46)

[node name="Detect" type="Area2D" parent="PlayerHook"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHook/Detect"]
position = Vector2(-876.25, -111.25)
shape = SubResource("RectangleShape2D_l64oo")

[node name="Onigiri" type="CharacterBody2D" parent="."]
position = Vector2(-21, 114)
scale = Vector2(0.12, 0.12)
collision_layer = 2
collision_mask = 4
script = ExtResource("6_kldpi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Onigiri"]
position = Vector2(-379.167, -541.667)
shape = SubResource("RectangleShape2D_k8atw")

[node name="Sprite2D" type="Sprite2D" parent="Onigiri"]
position = Vector2(-379.167, -541.667)
scale = Vector2(0.957207, 0.925926)
texture = ExtResource("3_k8b77")
region_enabled = true
region_rect = Rect2(302.217, 33.083, 148.049, 144.579)

[node name="top-margin" type="StaticBody2D" parent="."]
position = Vector2(-67, -90)

[node name="CollisionShape2D" type="CollisionShape2D" parent="top-margin"]
shape = SubResource("RectangleShape2D_gvjrv")

[node name="bottom-margin" type="StaticBody2D" parent="."]
position = Vector2(284, 329)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom-margin"]
position = Vector2(-351, -247)
shape = SubResource("RectangleShape2D_gvjrv")

[node name="OnigiriLabel" type="Sprite2D" parent="."]
position = Vector2(-235.219, -76.6875)
scale = Vector2(0.225082, 0.201199)
texture = ExtResource("3_k8b77")
region_enabled = true
region_rect = Rect2(299, 32.5, 153, 146.377)

[node name="pirata2" parent="." instance=ExtResource("8_3iyes")]
position = Vector2(-233, -28)

[node name="manivela-vara" type="Sprite2D" parent="."]
position = Vector2(-117, 36)
scale = Vector2(0.9375, 0.892858)
texture = ExtResource("7_td02i")
region_enabled = true
region_rect = Rect2(129.872, 151.209, 40.2897, 35.2864)

[connection signal="_progress_decreased" from="PlayerHook" to="." method="decreaseProgress"]
[connection signal="_progress_increased" from="PlayerHook" to="." method="increaseProgress"]
[connection signal="body_entered" from="PlayerHook/Detect" to="PlayerHook" method="_on_detect_body_entered"]
[connection signal="body_exited" from="PlayerHook/Detect" to="PlayerHook" method="_on_detect_body_exited"]
